--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MY PAGE</title>
+        <title>SUPER PRO PAGE</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     
@@ -28,5 +28,6 @@
     <footer>footer</footer>
 
 </body>
+
 
 </html>
