--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SUPER PRO PAGE</title>
+        <title>MY PAGE</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     
@@ -31,3 +31,4 @@
 
 
 </html>
+
