--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MY PAGE</title>
+        <title>SeanShine</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="images/favicon.ico">
     </head>
     
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="games.html">GAMES</a></li>
+                    <li class="logo"><a href="index.html">Home Logo</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="report.html">REPORT</a></li>
+                </ul>
+            </nav>
+        </header>
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="games.html">Games</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-        <h1>HOME</h1>
-    </header>
+        <section class="feature-box apps">
+            <div class="roblox">
+                <a href="https://www.roblox.com/home" target="_blank">Roblox Image</a>
+            </div>
+            <div class="minecraft">
+                <a href="https://www.minecraft.net/en-us" target="_blank">Minecraft Image</a>
+            </div>
+            <div class="fortnite">
+                <a href="https://www.fortnite.com/" target="_blank">Fortnite Image</a>
+            </div>
+        </section>
 
-    <section>
-        <div>a</div>
-        <div>b</div>
-        <div>c</div>
-    </section>
+        <section class="feature-box ad">
+            <div>lower-section</div>
+        </section>
+        <footer>footer</footer>
 
-    <section>lower-section</section>
-    <footer>footer</footer>
-
-</body>
-
+    </body>
 
 </html>
-
