--- a/report.html
+++ b/report.html
@@ -4,6 +4,7 @@
         <title>SeanShine</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="images/favicon.ico">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap">
     </head>
     
     <body>
@@ -11,27 +12,33 @@
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="games.html">GAMES</a></li>
+                    <li><a href="plants.html">PLANTS</a></li>
                     <li class="logo"><a href="index.html">Home Logo</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="report.html">REPORT</a></li>
                 </ul>
             </nav>
+            <h1>
+                SeanShine
+            </h1>
         </header>
 
-        <section class="feature-box apps">
-            <div class="roblox">
-                <a href="https://www.roblox.com/home" target="_blank">Roblox Image</a>
-            </div>
-            <div class="minecraft">
-                <a href="https://www.minecraft.net/en-us" target="_blank">Minecraft Image</a>
-            </div>
-            <div class="fortnite">
-                <a href="https://www.fortnite.com/" target="_blank">Fortnite Image</a>
-            </div>
+        <section class="features plants">
+            <figure>
+                <img src="images/azalea.png" alt="Azalea">
+                <figcaption>Azalea (Rhododendron simsii)</figcaption>
+            </figure>
+            <figure>
+                <img src="images/tulips.png" alt="Tulips">
+                <figcaption>Tulips (Tulipa spp.)</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dandelion.png" alt="Dandelion">
+                <figcaption>Dandelion (Taraxacum officinale)</figcaption>
+            </figure>
         </section>
 
-        <section class="feature-box ad">
+        <section class="features ad">
             <div>lower-section</div>
         </section>
         <footer>footer</footer>
